<resources>
    <string name="app_name">Time Lancer</string>
    <string name="title_activity_main">Time Lancer</string>

    <string name="menu_title_time_logs">Time Logs</string>
    <string name="menu_title_projects">Projects</string>
    <string name="menu_title_activities">Activities</string>
    <string name="menu_title_date">Date</string>
    <string name="menu_title_done">Done</string>

    <string name="date_format">EEE, d MMM yyyy</string>

    <string name="edit_text_hint_name">Name</string>
    <string name="edit_text_hint_date">Date</string>

    <string name="button_label_ok">OK</string>
    <string name="button_label_cancel">CANCEL</string>

    <string name="dialog_error_message_invalid">Invalid</string>
    <string name="dialog_title_new_project">New Project</string>
    <string name="dialog_title_new_activity">New Activity</string>

    <string name="toast_message_project_created">Project Created</string>
    <string name="toast_message_activity_created">Activity Created</string>
    <string name="spinner_label_project">Project</string>
    <string name="spinner_label_activity">Activity</string>
    <string name="edit_text_hint_hours">Hours</string>
    <string name="dialog_title_hours">Hours</string>
</resources>
